# TextEditor

./: CMakeLists.txt
src/: main.c  main.h
